samples/_failures_safe/1761321628_ce53e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3a0c4a0.c: In function ‘parser_init’:
./samples/SAFE/__tmp_e3a0c4a0.c:159:46: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  159 |     parser->current_token = lexer_next_token(lex
      |                                              ^~~
      |                                              lexer
./samples/SAFE/__tmp_e3a0c4a0.c:159:46: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e3a0c4a0.c:159:49: error: expected ‘)’ at end of input
  159 |     parser->current_token = lexer_next_token(lex
      |                                             ~   ^
      |                                                 )
./samples/SAFE/__tmp_e3a0c4a0.c:159:5: error: expected declaration or statement at end of input
  159 |     parser->current_token = lexer_next_token(lex
      |     ^~~~~~
